change font-size & width of some container

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
@@ -40,15 +40,17 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (13).jpg">
-                    <div class="img-about">
-                        <span class="img-about-heading">Articles & News</span>
-                        <span class="img-about-text"><a href="./index.html">Home </a> / Blog</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (13).jpg">
+                <div class="img-about">
+                    <span class="img-about-heading">Articles & News</span>
+                    <span class="img-about-text"><a href="./index.html">Home </a> / Blog</span>
                 </div>
-            </header>
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="main-section">
                     <div class="sub-section">
@@ -84,7 +86,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -98,7 +100,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn bg-white"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn bg-white"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -112,7 +114,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"> <button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"> <button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -126,7 +128,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"> <button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"> <button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -140,7 +142,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -154,7 +156,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -168,7 +170,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -182,7 +184,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn bg-white"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn bg-white"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -196,7 +198,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -210,7 +212,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -224,7 +226,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -238,7 +240,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -252,7 +254,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -266,7 +268,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn bg-white"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn bg-white"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -280,7 +282,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -294,7 +296,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -308,7 +310,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -322,7 +324,7 @@
                             </div>
                             <div class="sub-section-icon changeMargin">
                                 <span class="sub-section-date">26 December,2022 </span>
-                                <a href="../blogDetails/index.html"><button class="sub-section-btn"><i
+                                <a href="./blogDetails.html"><button class="sub-section-btn"><i
                                             class="fa fa-solid fa-angle-right"></i></button></a>
                             </div>
                         </div>
@@ -382,21 +384,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
             </footer>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.js"></script>
-    <script src="./app.js"></script>
-    <script src="./pagination.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/pagination.js"></script>
 </body>
 
 </html>
