--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
@@ -231,111 +231,108 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="counter">
-                    <div class="counter-details">
-                        <div class="first-counter">
-                            <div class="counter-text">
-                                <h4 class="count">12</h4>
-                                <span class="counter-active">Years Of Experiance</span>
-                            </div>
+        </div>
+        <div class="counter">
+            <div class="counter-details">
+                <div class="first-counter">
+                    <div class="counter-text">
+                        <h4 class="count">12</h4>
+                        <span class="counter-active">Years Of Experiance</span>
+                    </div>
+                </div>
+                <div class="counter-line">
+                    <span></span>
+                </div>
+                <div class="first-counter">
+                    <div class="counter-text">
+                        <h4 class="count">85</h4>
+                        <span class="counter-active">Success Project</span>
+                    </div>
+                </div>
+                <div class="counter-line">
+                    <span></span>
+                </div>
+                <div class="first-counter">
+                    <div class="counter-text">
+                        <h4 class="count">15</h4>
+                        <span class="counter-active">Active Project</span>
+                    </div>
+                </div>
+                <div class="counter-line">
+                    <span></span>
+                </div>
+                <div class="first-counter">
+                    <div class="counter-text">
+                        <h4 class="count">95</h4>
+                        <span class="counter-active">Happy CUstomers</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="blog">
+                <div class="blog-heading">
+                    <h4>Articles & News</h4>
+                    <span>It is a long established fact that a reader will be distracted by the of readable content
+                        of a page when lookings at its layouts the points of using.</span>
+                </div>
+                <div class="blog-content">
+                    <div class="blog-text-container">
+                        <button class="blog-btn" type="button">Kitchan Design</button>
+                        <div class="blog-img">
+                            <img src="./img/Photo (4).png">
                         </div>
-                        <div class="counter-line">
-                            <span></span>
+                        <div class="blog-img-text">
+                            <h4>Let’s Get Solution For Building Construction Work</h4>
                         </div>
-                        <div class="first-counter">
-                            <div class="counter-text">
-                                <h4 class="count">85</h4>
-                                <span class="counter-active">Success Project</span>
-                            </div>
+                        <div class="blog-date">
+                            <span>26 December,2022 </span>
+                            <button type="button" class="project-btn1"><i
+                                    class="fa fa-solid fa-angle-right"></i></button>
                         </div>
-                        <div class="counter-line">
-                            <span></span>
+                    </div>
+                    <div class="blog-text-container bg-color">
+                        <button class="blog-btn" type="button">Living Design</button>
+                        <div class="blog-img">
+                            <img src="./img/Photo (5).png">
                         </div>
-                        <div class="first-counter">
-                            <div class="counter-text">
-                                <h4 class="count">15</h4>
-                                <span class="counter-active">Active Project</span>
-                            </div>
+                        <div class="blog-img-text">
+                            <h4>Let’s Get Solution For Building Construction Work</h4>
                         </div>
-                        <div class="counter-line">
-                            <span></span>
+                        <div class="blog-date">
+                            <span>26 December,2022 </span>
+                            <button type="button" class="project-btn1 bg-btn"><i
+                                    class="fa fa-solid fa-angle-right"></i></button>
                         </div>
-                        <div class="first-counter">
-                            <div class="counter-text">
-                                <h4 class="count">95</h4>
-                                <span class="counter-active">Happy CUstomers</span>
-                            </div>
+                    </div>
+                    <div class="blog-text-container">
+                        <button class="blog-btn" type="button">Interior Design</button>
+                        <div class="blog-img">
+                            <img src="./img/Photo (6).png">
                         </div>
-                        <div class="counter-line">
-                            <span></span>
+                        <div class="blog-img-text">
+                            <h4>Let’s Get Solution For Building Construction Work</h4>
+                        </div>
+                        <div class="blog-date">
+                            <span>26 December,2022 </span>
+                            <button type="button" class="project-btn1"><i
+                                    class="fa fa-solid fa-angle-right"></i></button>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="blog">
-                    <div class="blog-heading">
-                        <h4>Articles & News</h4>
-                        <span>It is a long established fact that a reader will be distracted by the of readable content
-                            of a page when lookings at its layouts the points of using.</span>
+            <div class="contact-page">
+                <div class="contact-container">
+                    <div class="contact-text">
+                        <h4>Wanna join the interno?</h4>
+                        <span>It is a long established fact will be distracted.</span>
                     </div>
-                    <div class="blog-content">
-                        <div class="blog-text-container">
-                            <button class="blog-btn" type="button">Kitchan Design</button>
-                            <div class="blog-img">
-                                <img src="./img/Photo (4).png">
-                            </div>
-                            <div class="blog-img-text">
-                                <h4>Let’s Get Solution For Building Construction Work</h4>
-                            </div>
-                            <div class="blog-date">
-                                <span>26 December,2022 </span>
-                                <button type="button" class="project-btn1"><i
-                                        class="fa fa-solid fa-angle-right"></i></button>
-                            </div>
-                        </div>
-                        <div class="blog-text-container bg-color">
-                            <button class="blog-btn" type="button">Living Design</button>
-                            <div class="blog-img">
-                                <img src="./img/Photo (5).png">
-                            </div>
-                            <div class="blog-img-text">
-                                <h4>Let’s Get Solution For Building Construction Work</h4>
-                            </div>
-                            <div class="blog-date">
-                                <span>26 December,2022 </span>
-                                <button type="button" class="project-btn1 bg-btn"><i
-                                        class="fa fa-solid fa-angle-right"></i></button>
-                            </div>
-                        </div>
-                        <div class="blog-text-container">
-                            <button class="blog-btn" type="button">Interior Design</button>
-                            <div class="blog-img">
-                                <img src="./img/Photo (6).png">
-                            </div>
-                            <div class="blog-img-text">
-                                <h4>Let’s Get Solution For Building Construction Work</h4>
-                            </div>
-                            <div class="blog-date">
-                                <span>26 December,2022 </span>
-                                <button type="button" class="project-btn1"><i
-                                        class="fa fa-solid fa-angle-right"></i></button>
-                            </div>
-                        </div>
-                    </div>
+                    <button type="button" class="contatc-page-btn homepage-btn">
+                        Contact With Us<i class="fa fa-solid fa-arrow-right icon"></i>
+                    </button>
                 </div>
-
-                <div class="contact-page">
-                    <div class="contact-container">
-                        <div class="contact-text">
-                            <h4>Wanna join the interno?</h4>
-                            <span>It is a long established fact will be distracted.</span>
-                        </div>
-                        <button type="button" class="contatc-page-btn homepage-btn">
-                            Contact With Us<i class="fa fa-solid fa-arrow-right icon"></i>
-                        </button>
-                    </div>
-                </div>
+            </div>
             </section>
 
             <footer>
@@ -390,20 +387,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
-            </footer>
         </div>
+        <hr>
+        <div class="container">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
+        </div>
+        </footer>
+    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
