--- a/price.html
+++ b/price.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
@@ -40,16 +40,17 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (34).jpg">
-                    <div class="img-about">
-                        <span class="img-about-heading">Pricing &amp; Plan</span>
-                        <span class="img-about-text"><a href="./index.html">Home</a> / Pricing</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (34).jpg">
+                <div class="img-about">
+                    <span class="img-about-heading">Pricing &amp; Plan</span>
+                    <span class="img-about-text"><a href="./index.html">Home</a> / Pricing</span>
                 </div>
-            </header>
-
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="pricing">
                     <div class="price-container">
@@ -62,8 +63,8 @@
                                 Interior design advices
                                 Furniture reorganization
                                 Up to 5 hours meetings</span>
-                            <button class="main-content-btn">Get Started<i
-                                    class="fa fa-solid fa-arrow-right arrows"></i></button>
+                            <button class="main-content-btn homepage-btn">Get Started<i
+                                    class="fa fa-solid fa-arrow-right arrows arr"></i></button>
                         </div>
                         <div class="price-content medium">
                             <span class="price-heading">Complete interior</span>
@@ -90,8 +91,8 @@
                                 Sofas and amchairs
                                 Tables and chairs
                                 Kitchens</span>
-                            <button class="main-content-btn">Get Started<i
-                                    class="fa fa-solid fa-arrow-right arrows"></i></button>
+                            <button class="main-content-btn homepage-btn">Get Started<i
+                                    class="fa fa-solid fa-arrow-right arrows arr"></i></button>
                         </div>
                     </div>
                 </div>
@@ -148,20 +149,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
             </footer>
         </div>
+        <hr>
+        <div class="container">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 
 
 </body>
