--- a/serviceSingle.html
+++ b/serviceSingle.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
@@ -42,15 +42,17 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (42).jpg">
-                    <div class="img-about">
-                        <span class="img-about-heading">Services Single</span>
-                        <span class="img-about-text"><a href="./index.html">Home</a> / Services Single</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (42).jpg">
+                <div class="img-about">
+                    <span class="img-about-heading">Services Single</span>
+                    <span class="img-about-text"><a href="./index.html">Home</a> / Services Single</span>
                 </div>
-            </header>
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="services-details">
                     <div class="details-serviceSingle">
@@ -66,15 +68,19 @@
                             </span>
                             <span class="bg-color-brown text-color">
                                 when lookings at its layouts the points spriof using that it has a more
-                                less normal.A wonderful serenity has taken pgossession of my entire soul, like thesce
-                                sweet morndsings of sphring which I enjoy with my forwhole heart. I am alone, and feel
+                                less normal.A wonderful serenity has taken pgossession of my entire soul, like
+                                thesce
+                                sweet morndsings of sphring which I enjoy with my forwhole heart. I am alone, and
+                                feel
                                 the charm of excgistence in this spot, which was created for the bliss of souls like
                                 mine.
                             </span>
                             <span class="bottom-text">
                                 when lookings at its layouts the points spriof using that it has a more
-                                less normal.A wonderful serenity has taken pgossession of my entire soul, like thesce
-                                sweet morndsings of sphring which I enjoy with my forwhole heart. I am alone, and feel
+                                less normal.A wonderful serenity has taken pgossession of my entire soul, like
+                                thesce
+                                sweet morndsings of sphring which I enjoy with my forwhole heart. I am alone, and
+                                feel
                                 the charm of excgistence in this spot, which was created for the bliss of souls like
                                 mine.
                             </span>
@@ -136,54 +142,53 @@
                     </div>
                     <div class="main-content">
                         <span class="main-content-heading">We love design.That's how we got here.</span>
-                        <span class="main-content-text">It is a long established fact that a reader will be distracted
+                        <span class="main-content-text">It is a long established fact that a reader will be
+                            distracted
                             by the of readable content .</span>
                         <button class="main-content-btn" type="submit">Our Portfolio<i
                                 class="fa fa-solid fa-arrow-right arrow"></i></button>
                     </div>
                 </div>
-                <div class="counter">
-                    <div class="counter-details">
-                        <div class="first-counter">
-                            <div class="counter-text">
-                                <h4 class="count">12</h4>
-                                <span class="counter-active">Years Of Experiance</span>
-                            </div>
-                        </div>
-                        <div class="counter-line">
-                            <span></span>
-                        </div>
-                        <div class="first-counter">
-                            <div class="counter-text">
-                                <h4 class="count">85</h4>
-                                <span class="counter-active">Success Project</span>
-                            </div>
-                        </div>
-                        <div class="counter-line">
-                            <span></span>
-                        </div>
-                        <div class="first-counter">
-                            <div class="counter-text">
-                                <h4 class="count">15</h4>
-                                <span class="counter-active">Active Project</span>
-                            </div>
-                        </div>
-                        <div class="counter-line">
-                            <span></span>
-                        </div>
-                        <div class="first-counter">
-                            <div class="counter-text">
-                                <h4 class="count">95</h4>
-                                <span class="counter-active">Happy CUstomers</span>
-                            </div>
-                        </div>
-                        <div class="counter-line">
-                            <span></span>
-                        </div>
+        </div>
+        <div class="counter">
+            <div class="counter-details">
+                <div class="first-counter">
+                    <div class="counter-text">
+                        <h4 class="count">12</h4>
+                        <span class="counter-active">Years Of Experiance</span>
                     </div>
                 </div>
-            </section>
-
+                <div class="counter-line">
+                    <span></span>
+                </div>
+                <div class="first-counter">
+                    <div class="counter-text">
+                        <h4 class="count">85</h4>
+                        <span class="counter-active">Success Project</span>
+                    </div>
+                </div>
+                <div class="counter-line">
+                    <span></span>
+                </div>
+                <div class="first-counter">
+                    <div class="counter-text">
+                        <h4 class="count">15</h4>
+                        <span class="counter-active">Active Project</span>
+                    </div>
+                </div>
+                <div class="counter-line">
+                    <span></span>
+                </div>
+                <div class="first-counter">
+                    <div class="counter-text">
+                        <h4 class="count">95</h4>
+                        <span class="counter-active">Happy CUstomers</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </section>
+        <div class="container">
             <footer>
                 <div class="footer">
                     <div class="footer-container">
@@ -236,20 +241,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
-            </footer>
         </div>
+        <hr>
+        <div class="conainer">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
+        </div>
+        </footer>
+    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
