--- a/teamSingle.html
+++ b/teamSingle.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
@@ -40,19 +40,21 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (45).jpg">
-                    <div class="img-about">
-                        <span class="img-about-heading">Professional Single</span>
-                        <span class="img-about-text"><a href="./index.html">Home</a> / Team Single</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (45).jpg">
+                <div class="img-about">
+                    <span class="img-about-heading">Professional Single</span>
+                    <span class="img-about-text"><a href="./index.html">Home</a> / Team Single</span>
                 </div>
-            </header>
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="mamber-profile">
                     <div class="mamber-img">
-                        <img src="./img/Photo (10).png">
+                        <img src="./img/Photo (62).png">
                     </div>
                     <div class="mamber-details">
                         <div class="mamber">
@@ -86,7 +88,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="bio">
                     <div class="subTitle">
                         <span class="sub-heading">Short Biography</span>
@@ -112,15 +113,24 @@
                             </div>
                             <div class="time-line">
                                 <div class="time-line-project">
-                                    <span class="sub-content sub-title">Project-Design</span>
+                                    <div class="sub-title-content color3">
+                                        <span class="sub-content sub-title">Project-Design</span>
+                                        <span class="presnt">65%</span>
+                                    </div>
                                     <span class="hr_line"></span><span class="hr_color color"></span>
                                 </div>
                                 <div class="time-line-project">
-                                    <span class="sub-content sub-title">Team Management</span>
+                                    <div class="sub-title-content color4">
+                                        <span class="sub-content sub-title">Team Management</span>
+                                        <span class="presnt">95%</span>
+                                    </div>
                                     <span class="hr_line"></span><span class="hr_color color1"></span>
                                 </div>
                                 <div class="time-line-project">
-                                    <span class="sub-content sub-title">Client Satisfactio</span>
+                                    <div class="sub-title-content color5">
+                                        <span class="sub-content sub-title">Client Satisfactio</span>
+                                        <span class="presnt">75%</span>
+                                    </div>
                                     <span class="hr_line"></span><span class="hr_color color2"></span>
                                 </div>
                             </div>
@@ -165,33 +175,35 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="team">
-                    <div class="team-content">
-                        <div class="team-image">
-                            <img src="./img/Photo (10).png">
-                        </div>
-                        <div class="team-image">
-                            <img src="./img/Photo (9).png">
-                        </div>
-                        <div class="team-text">
-                            <span class="team-text-heading">Nattasha Julie
-                                Design, Australia</span>
-                            <div class="icons">
-                                <img src="./img/1.png">
-                                <img src="./img/2.png">
-                                <img src="./img/3.png">
-                                <img src="./img/4.png">
-                            </div>
-                            <span class="address">+1 (378) 400-1234
-                                julie@email.com</span>
-                        </div>
-                        <div class="team-image">
-                            <img src="./img/Photo (8).png">
-                        </div>
-                    </div>
+            </section>
+        </div>
+        <div class="team">
+            <div class="team-content">
+                <div class="team-image">
+                    <img src="./img/Photo (10).png">
                 </div>
-
+                <div class="team-image">
+                    <img src="./img/Photo (9).png">
+                </div>
+                <div class="team-text">
+                    <span class="team-text-heading">Nattasha Julie
+                        Design, Australia</span>
+                    <div class="icons icons-img">
+                        <img src="./img/1.png">
+                        <img src="./img/2.png">
+                        <img src="./img/3.png">
+                        <img src="./img/4.png">
+                    </div>
+                    <span class="address">+1 (378) 400-1234
+                        julie@email.com</span>
+                </div>
+                <div class="team-image">
+                    <img src="./img/Photo (8).png">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <section>
                 <div class="mail-box">
                     <div class="mail-box-contant">
                         <div class="mail-box-heading">
@@ -218,6 +230,8 @@
                     </div>
                 </div>
             </section>
+        </div>
+        <div class="container">
             <footer>
                 <div class="footer">
                     <div class="footer-container">
@@ -270,19 +284,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
             </footer>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
