--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
@@ -40,15 +40,17 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (12).png">
-                    <div class="img-about">
-                        <span class="img-about-heading">About Us</span>
-                        <span class="img-about-text"><a href="./index.html">Home</a> / About Us</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (12).png">
+                <div class="img-about">
+                    <span class="img-about-heading">About Us</span>
+                    <span class="img-about-text"><a href="./index.html">Home</a> / About Us</span>
                 </div>
-            </header>
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="main-section">
                     <div class="icon">
@@ -100,55 +102,55 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="team">
-                    <div class="team-content">
-                        <div class="team-image">
-                            <img src="./img/Photo (10).png">
+        </div>
+        <div class="team">
+            <div class="team-content">
+                <div class="team-image">
+                    <img src="./img/Photo (10).png">
+                </div>
+                <div class="team-image">
+                    <img src="./img/Photo (9).png">
+                </div>
+                <div class="team-text">
+                    <span class="team-text-heading">Nattasha Julie
+                        Design, Australia</span>
+                    <div class="icons icons-img">
+                        <img src="./img/1.png">
+                        <img src="./img/2.png">
+                        <img src="./img/3.png">
+                        <img src="./img/4.png">
+                    </div>
+                    <span class="address">+1 (378) 400-1234
+                        julie@email.com</span>
+                </div>
+                <div class="team-image">
+                    <img src="./img/Photo (8).png">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="mail-box">
+                <div class="mail-box-contant">
+                    <div class="mail-box-heading">
+                        <span class="mail-heading">Creative project? Let's have
+                            a productive talk.</span>
+                    </div>
+                    <div class="form">
+                        <div class="name-section">
+                            <input type="text" placeholder="Name" class="form-section">
                         </div>
-                        <div class="team-image">
-                            <img src="./img/Photo (9).png">
-                        </div>
-                        <div class="team-text">
-                            <span class="team-text-heading">Nattasha Julie
-                                Design, Australia</span>
-                            <div class="icons">
-                                <img src="./img/1.png">
-                                <img src="./img/2.png">
-                                <img src="./img/3.png">
-                                <img src="./img/4.png">
-                            </div>
-                            <span class="address">+1 (378) 400-1234
-                                julie@email.com</span>
-                        </div>
-                        <div class="team-image">
-                            <img src="./img/Photo (8).png">
+                        <div class="email-section">
+                            <input type="email" placeholder="Email" class="form-section">
                         </div>
                     </div>
-                </div>
-
-                <div class="mail-box">
-                    <div class="mail-box-contant">
-                        <div class="mail-box-heading">
-                            <span class="mail-heading">Creative project? Let's have
-                                a productive talk.</span>
-                        </div>
-                        <div class="form">
-                            <div class="name-section">
-                                <input type="text" placeholder="Name" class="form-section">
-                            </div>
-                            <div class="email-section">
-                                <input type="email" placeholder="Email" class="form-section">
-                            </div>
-                        </div>
-                        <div class="massage-section">
-                            <span class="massage">Hello Iam Intrested in..</span>
-                            <textarea class="massgae-text-area"></textarea>
-                        </div>
-                        <button class="main-content-btn submit-btn-about" type="submit">Send Now<i
-                                class="fa fa-solid fa-arrow-right arrows"></i></button>
+                    <div class="massage-section">
+                        <span class="massage">Hello Iam Intrested in..</span>
+                        <textarea class="massgae-text-area"></textarea>
                     </div>
+                    <button class="main-content-btn submit-btn-about" type="submit">Send Now<i
+                            class="fa fa-solid fa-arrow-right arrows"></i></button>
                 </div>
+            </div>
             </section>
             <footer>
                 <div class="footer">
@@ -202,19 +204,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
             </footer>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
