--- a/contactUs.html
+++ b/contactUs.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
@@ -42,20 +42,21 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (22).jpg">
-                    <div class="img-about">
-                        <span class="img-about-heading">Contact Us</span>
-                        <span class="img-about-text"><a href="./index.html">Home</a> / Contact</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (22).jpg">
+                <div class="img-about">
+                    <span class="img-about-heading">Contact Us</span>
+                    <span class="img-about-text"><a href="./index.html">Home</a> / Contact</span>
                 </div>
-            </header>
-
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="main-contact-container">
                     <div class="mail-box-heading">
-                        <span class="mail-heading">We love meeting new people and helping them.
+                        <span class="mail-heading mail-text-heading">We love meeting new people and helping them.
 
                         </span>
                     </div>
@@ -164,22 +165,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
             </footer>
+        </div>
+        <hr>
+        <div class="container">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
     <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
-    <script src="./app.js"></script>
-    <script src="./map.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/map.js"></script>
 </body>
 
 </html>
