--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
@@ -40,15 +40,17 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (52).jpg">
-                    <div class="img-about">
-                        <span class="img-about-heading">Our Project</span>
-                        <span class="img-about-text"><a href="./index.html">Home</a> / Project</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (52).jpg">
+                <div class="img-about">
+                    <span class="img-about-heading">Our Project</span>
+                    <span class="img-about-text"><a href="./index.html">Home</a> / Project</span>
                 </div>
-            </header>
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="tab">
                     <div class="tab-items">
@@ -1558,21 +1560,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
-                </div>
             </footer>
         </div>
+        <hr>
+        <div class="copyright">
+            <div class="copyright-text">
+                <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+            </div>
+        </div>
+    </div>
+    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.js"></script>
-    <script src="./pagination2.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/pagination2.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
