--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design Webflow Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 
@@ -40,15 +40,17 @@
                     </div>
                 </div>
             </nav>
-            <header>
-                <div class="main-header">
-                    <img src="./img/Photo (40).jpg">
-                    <div class="img-about">
-                        <span class="img-about-heading">Services</span>
-                        <span class="img-about-text"><a href="./index.html">Home</a> / Services</span>
-                    </div>
+        </div>
+        <header>
+            <div class="main-header">
+                <img src="./img/Photo (40).jpg">
+                <div class="img-about">
+                    <span class="img-about-heading">Services</span>
+                    <span class="img-about-text"><a href="./index.html">Home</a> / Services</span>
                 </div>
-            </header>
+            </div>
+        </header>
+        <div class="container">
             <section>
                 <div class="service-work work">
                     <div class="work-topic sercive-work-topic">
@@ -194,7 +196,7 @@
                             <h4>Wanna join the interno?</h4>
                             <span>It is a long established fact will be distracted.</span>
                         </div>
-                        <button type="button" class="contatc-page-btn">
+                        <button type="button" class="contatc-page-btn homepage-btn">
                             Contact With Us<i class="fa fa-solid fa-arrow-right icon"></i>
                         </button>
                     </div>
@@ -252,19 +254,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="copyright">
-                        <hr>
-                        <div class="copyright-text">
-                            <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
-                        </div>
-                    </div>
                 </div>
-            </footer>
         </div>
+        <hr>
+        <div class="container">
+            <div class="copyright">
+                <div class="copyright-text">
+                    <span>Copyright © Interno | Designed by Victorflow Templates - Powered by Webflow</span>
+                </div>
+            </div>
+        </div>
+        </footer>
+    </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
